Fixed alignment of home-content columns to space well with new element

--- a/src/App.css
+++ b/src/App.css
@@ -281,7 +281,8 @@ h3 {
 
 .home-content {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
+  margin-bottom: 3%;
 }
 
 .home-description {
@@ -289,27 +290,31 @@ h3 {
   flex-direction: column;
   align-items: center;
   align-self: center;
-  width: 50%;
+  flex-basis: 50%;
 }
 
 #abstract {
   margin: 0;
   font-family: var(--text-tertiary);
   font-size: 20px;
+  background-color: #402278;
+  padding: 3%;
+  border-radius: 1rem 1rem;
+  margin-bottom: 2%;
 }
 
 .release {
-  margin: 20px;
+  margin: 4%;
   padding: 20px;
 }
 
 .steam-container {
   display: flex;
   flex-direction: column;
-  width: 100%;
   padding: 3%;
   background-color: #282F38;
   position: relative;
+  margin-top: 2%;
 }
 
 .steam-title {
@@ -394,8 +399,12 @@ h3 {
 .home-screenshots {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
+}
+
+.home-screenshots img {
+  width: 90%;
 }
 
 /* ---------------------------------------------------------- */
